# system-monitor

./: .gitignore  CMakeLists.txt  cputools.cpp  cputools.h  filesystemworker.cpp  hashqstring.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rcmonitor.cpp  rcmonitor.h  rcmonitor.ui  resourcesworker.cpp  resourcesworker.h  system-monitor.pro  tablenumberitem.h
